feat: add ssh key
